objects/User_Permissions_Mapping__mdt/User_Permissions_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Manages the Roles, Profiles, User Permissions, Permission Set Groups, Licenses based on Department</description>
    <label>User Permission Mapping</label>
    <pluralLabel>User Permission Mappings</pluralLabel>
</CustomObject>