objects/User_Permissions_Mapping__mdt/fields/Allow_Forecasting__c.field-meta.xml
<CustomField>
    <fullName>Allow_Forecasting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Forecasting</label>
    <type>Checkbox</type>
</CustomField>