objects/User_Permissions_Mapping__mdt/fields/Assign_Groove_Dialer_license__c.field-meta.xml
<CustomField>
    <fullName>Assign_Groove_Dialer_license__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS-11266: When this box is checked, it indicates that Salesforce automation has sent a request to Groove to assign this user a Groove Dialer license.</description>
    <inlineHelpText>When this box is checked, it indicates that Salesforce automation has sent a request to Groove to assign this user a Groove Dialer license.</inlineHelpText>
    <label>Assign Groove Dialer license</label>
    <type>Checkbox</type>
</CustomField>