objects/User_Permissions_Mapping__mdt/fields/Conga_Approvals_License__c.field-meta.xml
<CustomField>
    <fullName>Conga_Approvals_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conga Approvals License</label>
    <type>Checkbox</type>
</CustomField>