objects/User_Permissions_Mapping__mdt/fields/Conga_CLM_License__c.field-meta.xml
<CustomField>
    <fullName>Conga_CLM_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conga CLM License</label>
    <type>Checkbox</type>
</CustomField>