objects/User_Permissions_Mapping__mdt/fields/Flow_User__c.field-meta.xml
<CustomField>
    <fullName>Flow_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow User</label>
    <type>Checkbox</type>
</CustomField>