objects/User_Permissions_Mapping__mdt/fields/Knowledge_User__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knowledge User</label>
    <type>Checkbox</type>
</CustomField>