objects/User_Permissions_Mapping__mdt/fields/Permission_Set_Group_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Group_API_Name__c</fullName>
    <label>Permission Set Group API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>