objects/User_Permissions_Mapping__mdt/fields/Role_Category__c.field-meta.xml
<CustomField>
    <fullName>Role_Category__c</fullName>
    <label>Role Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>