objects/User_Permissions_Mapping__mdt/fields/Salesforce_CPQ_License__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_CPQ_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce CPQ License</label>
    <type>Checkbox</type>
</CustomField>