objects/User_Permissions_Mapping__mdt/fields/Salesforce_CRM_Content_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_CRM_Content_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce CRM Content User</label>
    <type>Checkbox</type>
</CustomField>