objects/User_Permissions_Mapping__mdt/fields/Service_Cloud_User__c.field-meta.xml
<CustomField>
    <fullName>Service_Cloud_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Cloud User</label>
    <type>Checkbox</type>
</CustomField>