objects/User_Permissions_Mapping__mdt/listViews/All_Departments.listView-meta.xml
<ListView>
    <fullName>All_Departments</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Permission_Set_Group_API_Name__c</columns>
    <columns>Conga_Approvals_License__c</columns>
    <columns>Conga_CLM_License__c</columns>
    <columns>Flow_User__c</columns>
    <columns>Marketing_User__c</columns>
    <columns>Role_Category__c</columns>
    <columns>Role_Name__c</columns>
    <columns>Profile_Name__c</columns>
    <columns>Salesforce_CPQ_License__c</columns>
    <columns>Knowledge_User__c</columns>
    <columns>Service_Cloud_User__c</columns>
    <columns>Assign_Groove_Core_license__c</columns>
    <columns>Assign_Groove_Flow_license__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Departments</label>
    <language>en_US</language>
</ListView>